# yakunin-project

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Dockerfile.base  README.md  pyproject.toml  yakunin-completion.bash  yakunin-wjapp-interaction.md
.svn/: wc.db
dump_server/: __init__.py
tests/: conftest.py  test_archives.py  test_documentclass.py  test_environment.py  test_jhep_submissions.py  test_log_reading_functions.py  test_mkpdf.py  test_pdfa.py  test_pitstop.py  test_service.py  test_watermark.py
tests/test-files/: 06-test.tgz  08-test-zip  09-test-texgz  11-test.tex.bz2  13-test-tar-bz2  20-test-tar  21-test.odt  22-test.docx  30456-Paper.rar  expected_results.xml
yakunin/: __init__.py  archive.py  exceptions.py  lib.py  log_reading_lib.py  service.py  service_handlers.py  src_tidyup_lib.py
